wordpress.benefitscheckup.org/wp-content/themes/bcuwptheme/bcu.css
/* ... */
.page-id-13244 #selectAState {
    margin-right: 5px;
}

#text-size #largest,
#text-size #largest_disabled {
    font-size: 32px;
}

#text-size #larger,
#text-size #larger_disabled {
    font-size: 28px;
}

#text-size a {
    text-decoration: none;
}

/* BCU QuickCheckup */
#bcuQuickcheckClose {
    float: right;
}

#bcuQuickcheckTitle {
    border-bottom: 2px solid #00479d;
    margin-bottom: 7px;
}

#bcu_quickcheck h2.bcuQuickcheckTitle {
    color: #1F419B !important;
    font-size: 31.5px !important;
}

@media (min-width: 768px) {
    #bcu_quickcheck {
        width: 90%;
        margin-left: -45%;
    }

    #bcu_quickcheck .well {
        min-height: 430px !important;
    }
}

@media (max-width: 768px) {
    #bcu_quickcheck {
        width: 90%;
        margin-left: 2%;
        max-height: 95% !important;
    }
}

#bcu_quickcheck .alert-bcuQuickCheck {
    margin: 6px 0 !important;
}

#bcu_quickcheck .bcuQuestionSet {
    margin-bottom: 5px;
}

.bcuQuickcheckQuestion .radio, .bcuQuickcheckQuestion .checkbox {
    margin-top: 4px;
}

#esiQuickcheckCheckboxes {
    margin-top: 6px;
}

#esiQuickcheckResultsButton {
    cursor: pointer;
    margin-bottom: 10px;
}

#bcuQuickcheckForm {
    margin: 0 0 5px;
}

#esiQuickcheckCheckboxes .first-column {
    width: 50%;
    float: left;
}

#esiQuickcheckCheckboxes .last-column {
    width: 50%;
    float: left;
    display: block;
}

@media (max-width: 480px) {

    #esiQuickcheckCheckboxes .first-column {
        width: 100%;
        float: left;
        margin-bottom: 10px;
    }

    #esiQuickcheckCheckboxes .last-column {
        display: none
    }
}

@media (max-width: 600px) {

    #esiQuickcheckCheckboxes .first-column {
        width: 100%;
        float: left;
        margin-bottom: 10px;
    }

    #esiQuickcheckCheckboxes .last-column {
        display: none
    }
}

div#bcu_quickcheck {
    overflow-y: scroll;
    overflow-x: hidden;
}

.modal-body {
    max-height: inherit;
}

h2.benefitsCheckUpTitle {
    font-size: 1.8em !important;
    color: #012A5C !important;
}

#esiMenuToggleButton {
    display: none;
    padding: 0;
    margin-bottom: 10px;
    background: #f1601b;
    width: 50px;
    height: 50px;
    border: 0;
    border-radius: 0;
    filter: progid:DXImageTransform.Microsoft.Matrix(M11=0, M12=0, M21=0, M22=0, sizingMethod='auto expand');
    zoom: 1;
    /*top: ;*/
    left: 0;
    float: none;
    position: absolute;
    z-index: 10;
    color: white;
}

.well.modal-body {
    overflow-y: scroll;
    overflow-x: hidden;
}

.frozenBody {
    overflow-x: hidden;
    overflow-y: hidden;
    z-index: -1;
}

#options_bcuqc_income {
    width: 48%;
    float: left;
}

#options_bcuqc_interest_category {
    width: 48%;
    float: right;
}

@media (max-width: 480px) {

    #options_bcuqc_income {
        width: 100%;
        float: inherit;
    }

    #options_bcuqc_interest_category {
        width: 100%;
        float: inherit;
    }
}

@media (max-width: 600px) {

    #options_bcuqc_income {
        width: 100%;
        float: inherit;
    }

    #options_bcuqc_interest_category {
        width: 100%;
        float: inherit;
    }
}

#question_dob {
    float: left;
}

#question_zip {
    float: left;
}

#label_bcuqc_income_3000 {
    margin-top: 5px;
}

#label_bcuqc_income_1000 {
    margin-top: 10px;
}



:-ms-fullscreen, :root .ie11up {

 img#esiQuickcheckResultsButton {
    bottom: -50px;
    right: 25%;
    left: 50%;
    margin-left: -150px;
    position: absolute;
    }
}

